Committing long time local changes

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,22 @@
 public/
 static/pimg
 static/css/screen.css*
-deploy.sh
-
+bin/deploy.sh
+TODO
+content/blog/2017-05-26_ephone-hibas-tls-szolgaltatasi-pont.hu.md
+content/blog/2017-10-15_syncing-android-photos-using-standard-unix-tools.hu.md
+content/blog/2017-05-25_tidying-up-haproxy.cfg.md
+content/blog/2017-06-08_filtering-dns-noise-with-netfilter-bpf-matcher.hu.md
+content/blog/2018-04-17_shipping-logs-to-logz.io-service.hu.md
+content/blog/2017-05-21_ebp007_pizzeria-email-got-banned-do-the-phishing.hu.md
+content/blog/2017-10-29_bluetooth-audio-gateway-tested.md
+content/blog/2018-04-17_shipping-logs-to-logz.io-service.md
+content/blog/2017-06-24_enabling-the-second-spi-bus-on-the-raspberry-pi-2-and-3.hu.md
+content/blog/2017-06-08_filtering-dns-noise-with-netfilter-bpf-matcher.md
+content/blog/2017-05-21_ebp007_pizzeria-email-got-banned-do-the-phishing.md
+content/blog/2017-05-25_tidying-up-haproxy.cfg.hu.md
+content/blog/2017-10-15_syncing-android-photos-using-standard-unix-tools.md
+content/blog/2017-06-24_enabling-the-second-spi-bus-on-the-raspberry-pi-2-and-3.md
+content/blog/2017-12-31_my-new-arch-repo-called-endrepo.md
+content/blog/2017-12-31_my-new-arch-repo-called-endrepo.hu.md
+content/blog/2017-10-29_bluetooth-audio-gateway-tested.hu.md
