--- a/config.yaml
+++ b/config.yaml
@@ -91,3 +91,7 @@ Languages:
               - url: '/hu/tutorial/'
                 name: 'Tutorialok'
                 weight: 1.5
+##outputFormats:
+##    RSS:
+##        mediatype: "application/rss"
+##        baseName: "feed/index"
